# wgpu_shader_playground

./: Cargo.toml  LICENSE  README.md  index.html
docs/: shader_playground_lib.d.ts  shader_playground_lib.js  shader_playground_lib_bg.wasm  shader_playground_lib_bg.wasm.d.ts
src/: lib.rs  main.rs  shader.wgsl
