[package]
name = "shader_playground"
version = "0.1.0"
edition = "2021"

[lib]
name = "shader_playground_lib"
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]

[[bin]]
name = "shader_playground"
path = "src/main.rs"

[dependencies]
bytemuck = "1"
pollster = "0.3"
wgpu = { version = "0.18", features = ["webgl"] }
winit = { version = "0.29", features = ["rwh_05"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1"
wasm-bindgen = "0.2.88"
wasm-bindgen-futures = "0.4.34"
web-sys = { version ="0.3.64", features = [
    "Location",
    "Blob",
    "RequestInit",
    "RequestMode",
    "Request",
    "Response",
    "WebGl2RenderingContext",
    "CanvasRenderingContext2d"
] }